# Currency-Movement-Prediction-Pipeline-Kedro-Machine-Learning-

./: Currency-Movement-Predtiction.py  README.md
currency-movement-prediction-pipeline/: README.md  pyproject.toml
currency-movement-prediction-pipeline/conf/: logging.yml
currency-movement-prediction-pipeline/conf/base/: catalog.yml  parameters.yml
currency-movement-prediction-pipeline/docs/source/: conf.py  index.rst
currency-movement-prediction-pipeline/src/currency_movement_prediction_pipeline/: __init__.py  __main__.py  pipeline_registry.py  settings.py
currency-movement-prediction-pipeline/src/currency_movement_prediction_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
currency-movement-prediction-pipeline/src/currency_movement_prediction_pipeline/pipelines/feature_eng/: nodes.py  pipeline.py
currency-movement-prediction-pipeline/src/currency_movement_prediction_pipeline/pipelines/inference/: nodes.py
currency-movement-prediction-pipeline/src/currency_movement_prediction_pipeline/pipelines/training/: nodes.py  pipeline.py
